# make_animeface_dataset

./: .gitignore  Dockerfile  README.md  add_predict_image.py  annotation.py  check.py  check_face.py  config.yml  diagram.drawio  docker-compose.yml  exe.sh  fetch_image.py  main.py  make_dataset.py  predict_method.py  pretrain.py  pyproject.toml  rename.py  requirements.txt  test.py  train.py
learn/: ImageDataset.py  Model.py  TrainModel.py  train.py  weight.pt
lib/: clipImage.py
manage_data/: annotation.py  check.py  check_face.py  fetch_image.py  make_animefaceDB.py  make_illustFaceDB.py  make_predictFaceDB.py
training/: pretrain.py  train.py
training/utils/: IoULoss.py  Model.py  TrainModel.py  detectFaceDataset.py
utils/: ImageDataset.py  IoULoss.py  Model.py  TrainModel.py  predictFaceDataset.py
